# data-analysis

./: .gitignore  Dockerfile  README.md  app.py  azure.yaml  config.py  deploy_stable.sh  pyproject.toml  report_local.html  requirements.txt  server.py  startup.sh  startup.txt  startup_alternative.sh  test_api.py  web.config
.github/workflows/: main_data-analysis-0719.yml
core/: analysis.py  prompt.py  xingyun_service.py
