[project]
name = "data-analysis"
version = "0.1.0"
description = "Data Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.10.0",
    "scipy>=1.15.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
]
