[project]
name = "data-analysis"
version = "0.1.0"
description = "Data Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sanic",
    "sanic-cors",
    "sanic-ext",
    "openai",
    "numpy",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "requests",
    "aiofiles",
]
